<resources>
    <string name="app_name" translatable="false">Circles</string>
    <string name="txt_contacts_list_title">Phone book</string>
    <string name="txt_contacts_list_title_with_numbers">Phone book (%d contacts)</string>

    <string name="txt_empty_circles_list">Click Add button to add new circle!</string>
    <string name="txt_empty_contacts_list">Click Add button to add new contact!</string>
    <string name="txt_empty_circle_contacts_grid">Click Add button to add contacts to circle!</string>

    <string name="txt_contacts_list_loading_message">Loading contacts …</string>
    <string name="txt_circles_list_loading_message">Loading circles …</string>

    <string name="txt_contact_editor_name_hint">Enter Contact Name</string>
    <string name="txt_contact_editor_phone_number_hint">Enter Phone Number</string>
    <string name="txt_contact_editor_email_hint">Enter Email Address</string>

    <string name="txt_save_contact_editing">Save Contact</string>

    <string name="txt_delete_contact">Delete</string>
    <string name="txt_edit_contact">Edit</string>

    <string name="txt_confirm_delete_contact_title">Confirmation</string>
    <string name="txt_confirm_delete_contact_msg">Are you sure you want to delete contact?</string>
    <string name="txt_confirm_delete_ok_btn">Yes</string>
    <string name="txt_confirm_delete_no_btn">Cancel</string>

    <string name="txt_contacts_permission_must_be_granted">Contacts Permissions must be granted</string>

    <string name="txt_circle_name_hint">Enter Circle Name</string>
    <string name="txt_save_circle_editing">Save Circle</string>

    <string name="txt_circle_saved_message">Circle saved successfully</string>

    <string name="txt_circle_contacts_viewer_circle_name_label">Circle Name</string>

    <string name="txt_circle_contacts_viewer_contacts_list">Circle Contacts</string>

    <string name="txt_circle_name_updated_toast_message">Circle Name Updated!</string>

    <string name="txt_delete_contact_details_confirmation_title">Confirm</string>
    <string name="txt_delete_contact_details_confirmation_body">Are you sure you want to delete this item?</string>
    <string name="txt_delete_contact_details_confirmation_yes">Yes</string>
    <string name="txt_delete_contact_details_confirmation_no">No</string>

    <string name="txt_phone_call_permission_must_be_granted">Phone Call Permission must be granted to make calls</string>

    <string name="txt_add_contact_to_circle">Save</string>
    <string name="txt_cancel_add_contact_to_circle">Cancel</string>

    <string name="txt_phone_numbers_list_dialog_title">Choose Phone to call</string>

    <string-array name="txt_phone_types_arr">
        <item>Mobile</item>
        <item>Home</item>
        <item>Work</item>
    </string-array>


</resources>
