<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".feature.contacts.edit.ContactEditorFragment"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/fragment_contact_editor_image_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/fragment_content_editor_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_save_contact_editing"
        style="@style/StyleBtnWhiteText"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_contact_editor_image_view"
        app:layout_constraintBottom_toTopOf="@id/fragment_content_editor_save_button">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">


            <!-- Contact Display Name -->
            <EditText
                android:id="@+id/fragment_content_editor_name_edit_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/color_contact_white_text"
                android:inputType="text"
                android:autofillHints="@string/txt_contact_editor_name_hint"
                android:hint="@string/txt_contact_editor_name_hint"
                style="@style/StyleItemWhiteText"/>

            <!-- Contact Phone numbers layout -->
            <LinearLayout
                android:id="@+id/fragment_content_editor_phones_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_content_editor_name_edit_view">

                <ImageView
                    android:id="@+id/fragment_content_editor_phones_layout_add_phone_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus"
                    android:layout_gravity="end"
                    android:contentDescription="@string/app_name"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_content_editor_emails_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_content_editor_phones_layout">

                <ImageView
                    android:id="@+id/fragment_content_editor_emails_layout_add_email_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus"
                    android:layout_gravity="end"
                    android:contentDescription="@string/app_name"/>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/fragment_contact_editor_loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>