<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".feature.activitycircles.contactsviewer.CircleContactsViewerFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_circles_contacts_viewer_circle_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_circles_contacts_viewer_circle_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_circle_contacts_viewer_circle_name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/StyleTitleWithoutBannerWhiteText" />

        <!-- edit circle name -->
        <ImageView
            android:id="@+id/fragment_circle_contacts_viewer_circle_name_edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/edit_circles"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_circles_contacts_viewer_circle_name_text_view" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_circle_contacts_viewer_circle_name_editor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <!-- Edit circle Name -->
        <EditText
            android:id="@+id/fragment_circle_contacts_viewer_circle_name_editor_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/StyleTitleWithoutBannerWhiteText"/>

        <!-- Save circle name -->
        <ImageView
            android:id="@+id/fragment_circle_contacts_viewer_circle_name_save_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_circle_contacts_viewer_circle_name_editor_edit_text"/>

    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/fragment_circle_contacts_viewer_contacts_list_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_circle_contacts_viewer_contacts_list"
        style="@style/StyleBannerTitleWhiteText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_circles_contacts_viewer_circle_name_layout"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_circle_contacts_viewer_contacts_list_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp">

        <GridView
            android:id="@+id/fragment_circle_contacts_viewer_grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="auto_fit"/>

        <ProgressBar
            android:id="@+id/fragment_circle_contacts_viewer_loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragment_circle_contacts_viewer_add_contact_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/plus"
        app:backgroundTint="@color/color_floating_btn"
        app:fabSize="auto"
        android:layout_margin="16dp"/>


</android.support.constraint.ConstraintLayout>